[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeable_models"
version = "0.0.1"
authors = [
  { name="Michael Chen", email="mail@cnml.de" },
]
description = "Codeable Models aims to provide an easy-to-use API for coding software design models akin to UML models, but radically simplified compared to the UML2 meta-model."
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"